--- a/4_dog-pictures/src/index.css
+++ b/4_dog-pictures/src/index.css
@@ -11,3 +11,17 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.dog-pics {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 50px;
+}
+
+.dog-pics img {
+  width: 500px;
+  height:400px;
+  object-fit: contain;
+}
