--- a/7_color-picker/src/index.css
+++ b/7_color-picker/src/index.css
@@ -20,3 +20,11 @@ code {
     padding: 40px;
     margin: 10px;
 }
+
+.page {
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
